Organized files, added search functionality
The search bar now calls the API and gets results. Made some minor organizational and error-handling changes as well.

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@ body{
 	position: relative;
 	height:100vh;
 	width:100%;
-	background:linear-gradient(rgba(255, 127, 80,0.6),rgba(235, 77, 75,0.5)),url(1.jpeg);
+	background:linear-gradient(rgba(255, 127, 80,0.6),rgba(235, 77, 75,0.5));
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
